src/objects/PSPayment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_type__c</fullName>
        <label>Sub-type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Message__c</fullName>
        <label>Transaction Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PMT-{00000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>